Bug 1386726 - Fix alignment of banner item labels in the hamburger menu. r=Gijs
* The start padding should match the 12px defined for nearby toolbarbuttons:
.subview-subheader, panelview .toolbarbutton-1, .subviewbutton, .widget-overflow-list .toolbarbutton-1
* Add override for OSX which uses 18px for this padding
* Adjust margin for the right/end icon in banner items

MozReview-Commit-ID: 81u97Wf8qXr

UltraBlame original commit: 2bd5e6f268862556ff086477d81d8ed86234be9c

--- a/browser/themes/osx/customizableui/panelUI.css
+++ b/browser/themes/osx/customizableui/panelUI.css
@@ -156,6 +156,34 @@ start
 #
 appMenu
 -
+mainView
+>
+.
+panel
+-
+subview
+-
+body
+>
+.
+panel
+-
+banner
+-
+item
+{
+padding
+-
+inline
+-
+start
+:
+18px
+;
+}
+#
+appMenu
+-
 fxa
 -
 container
